# TinyChat

./: .gitignore  note.md
ChatServer/: message.proto
ChatServer/include/: AsioIOServicePool.h  CSession.h  ChatServer.h  ConfigMgr.h  Const.h  Data.h  Defer.h  LogicSystem.h  MsgNode.h  MySQLDao.h  MySQLMgr.h  RedisMgr.h  Singleton.h  StatusGrpcClient.h  UserMgr.h
ChatServer/src/: AsioIOServicePool.cc  CSession.cc  ChatGrpcClient.cc  ChatServer.cc  ChatServiceImpl.cc  ConfigMgr.cc  LogicSystem.cc  MsgNode.cc  MySQLDao.cc  RedisConnPool.cc  RedisMgr.cc  UserMgr.cc  main.cc
ChatServer02/: CMakeLists.txt
ChatServer02/include/: CSession.h  ChatGrpcClient.h  ChatServer.h  ChatServiceImpl.h  Const.h  LogicSystem.h  MsgNode.h  MySQLDao.h  MySQLMgr.h  MySQLPool.h  RedisConnPool.h  RedisMgr.h  message.pb.h
ChatServer02/src/: CSession.cc  ChatGrpcClient.cc  ChatServer.cc  ChatServiceImpl.cc  LogicSystem.cc  MsgNode.cc  MySQLDao.cc  MySQLMgr.cc  MySQLPool.cc  RedisMgr.cc  StatusGrpcClient.cc  UserMgr.cc  main.cc
GateServer/: CMakeLists.txt  config.ini
GateServer/include/: AsioIOServicePool.h  CServer.h  Const.h  HttpConnection.h  LogicSystem.h  MySQLMgr.h  MySQLPool.h  RedisConnPool.h  RedisMgr.h  Singleton.h  StatusGrpcClient.h  VerifyGrpcClient.h  const.h  message.grpc.pb.h
GateServer/src/: CServer.cc  GateServer.cc  HttpConnection.cc  LogicSystem.cc  MySQLDao.cc  MySQLMgr.cc  MySQLPool.cc  RedisConnPool.cc  RedisMgr.cc  StatusGrpcClient.cc  VerifyGrpcClient.cc  message.grpc.pb.cc
QT/TinyChatQt/: AddUserItem.cpp  AddUserItem.h  ApplyFriend.cpp  ApplyFriend.h  ApplyFriendItem.cpp  ApplyFriendItem.h  ApplyFriendList.cpp  ApplyFriendList.h  ApplyFriendPage.cpp  ApplyFriendPage.h  BubbleFrame.cpp  BubbleFrame.h  CMakeLists.txt  ChatDialog.cpp  ChatDialog.h  ChatItemBase.cpp  ChatItemBase.h  ChatPage.cpp  ChatPage.h  ChatUserList.cpp  ChatUserList.h  ChatUserWid.cpp  ChatUserWid.h  ChatView.cpp  ChatView.h  ClickedBtn.cpp  ClickedBtn.h  ClickedLabel.cpp  ClickedLabel.h  ClickedOnce.cpp  ClickedOnce.h  ConUserItem.cpp  ConUserItem.h  ContactUserList.cpp  ContactUserList.h  CustomizeEdit.cpp  CustomizeEdit.h  FindSuccessDialog.cpp  FindSuccessDialog.h  FriendLabel.cpp  (+45 more)
QT/TinyChatQt/style/: stylesheet.qss
StatusServer/: CMakeLists.txt  message.proto
StatusServer/include/: AsioIOServicePool.h  ConfigMgr.h  Const.h  Data.h  Defer.h  MySQLDao.h  MySQLPool.h  RedisMgr.h  Singleton.h  StatusServiceImpl.h  message.grpc.pb.h
StatusServer/src/: AsioIOServicePool.cc  ConfigMgr.cc  MySQLDao.cc  RedisConnPool.cc  RedisMgr.cc  StatusServer.cc  StatusServiceImpl.cc  message.pb.cc
VerifyServer/: config.json  const.js  email.js  package-lock.json  package.json  proto.js  redis.js  server.js
